k8s_deployment_databases.yaml
---
# redis database
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-azure-redis
  namespace: rse
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: llm-azure-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: llm-azure-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/name: llm-azure-redis
    spec:
      containers:
        - name: llm-azure-redis-db
          image: redis:7.2.3
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 1
---
# mongo database
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-azure-mongo
  namespace: rse
  labels:
    app.kubernetes.io/name: llm-azure-mongo
    app.kubernetes.io/component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: llm-azure-mongo
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: llm-azure-mongo
        app.kubernetes.io/component: server
    spec:
      containers:
        - name: llm-azure-mongo-db
          image: mongo:7.0.4
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 1
          volumeMounts:
            - mountPath: /data/db
              name: llm-azure-mongo
      volumes:
        - name: llm-azure-mongo
          persistentVolumeClaim:
            claimName: llm-azure-mongo
