k8s_deployment_gateway.yaml
---
# Gateway deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-gateway
  namespace: rse
  labels:
    app.kubernetes.io/name: llm-gateway
    app.kubernetes.io/component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: llm-gateway
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: llm-gateway
        app.kubernetes.io/component: server
    spec:
      volumes:
        - name: certificate-volume
          secret:
            secretName: llm-gatewaysaml-secret
      containers:
        - name: gateway
          image: harbor.cs.aalto.fi/aaltorse-public/llm_gateway:1.0 #Lets start versioning this
          ports:
            - containerPort: 3000
          resources:
            requests:
              # Maybe needs to be increased later on.
              cpu: 2
          volumeMounts:
            - mountPath: /app/saml/saml_data/certs
              name: certificate-volume
              readOnly: true
