k8s_services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: llm-azure-redis-svc
  labels:
    app.kubernetes.io/name: llm-azure-redis-svc
    app.kubernetes.io/component: server
  namespace: rse
spec:
  selector:
    app.kubernetes.io/name: llm-azure-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: llm-azure-mongo-svc
  labels:
    app.kubernetes.io/name: llm-azure-mongo-svc
    app.kubernetes.io/component: server
  namespace: rse
spec:
  selector:
    app.kubernetes.io/name: llm-azure-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: llm-azure-gateway-svc
  labels:
    app.kubernetes.io/name: llm-azure-gateway-svc
    app.kubernetes.io/component: server
  namespace: rse
spec:
  selector:
    app.kubernetes.io/name: llm-azure-gateway
    app.kubernetes.io/component: server
  ports:
    - protocol: TCP
      # Can we also use 443 here, or how does forwardng work for this?
      port: 80
      targetPort: 3000
---
